# datasette-upgrade

./: README.md  pyproject.toml
datasette_upgrade/: __init__.py
tests/: test_upgrade.py
