[project]
name = "datasette-upgrade"
version = "0.1"
description = "Upgrade Datasette instance configuration to handle new features"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = {text = "Apache-2.0"}
classifiers=[
    "Framework :: Datasette",
    "License :: OSI Approved :: Apache Software License"
]
requires-python = ">=3.8"
dependencies = [
    "datasette"
]

[project.urls]
Homepage = "https://github.com/datasette/datasette-upgrade"
Changelog = "https://github.com/datasette/datasette-upgrade/releases"
Issues = "https://github.com/datasette/datasette-upgrade/issues"
CI = "https://github.com/datasette/datasette-upgrade/actions"

[project.entry-points.datasette]
upgrade = "datasette_upgrade"

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
